[metadata]
name = python-liquid-extra
version = attr: liquid_extra.__version__
description = Extra tags an filters for python-liquid.
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/jg-rp/liquid-extra
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython
project_urls = 
    Documentation = https://github.com/jg-rp/liquid-extra/blob/main/README.rst
    Issue Tracker = https://github.com/jg-rp/liquid-extra/issues
    Source Code = https://github.com/jg-rp/liquid-extra
    Change Log = https://github.com/jg-rp/liquid-extra/blob/main/CHANGES.rst

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.7
install_requires =
    python-liquid>=1.2.1

[options.packages.find]
exclude =
    tests*

[mypy]
files = liquid_extra
python_version = 3.10
disallow_subclassing_any = True
disallow_untyped_calls = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
no_implicit_optional = True
local_partial_types = True
no_implicit_reexport = True
strict = True
warn_redundant_casts = True
warn_unused_configs = True
warn_unused_ignores = True
warn_return_any = True
warn_unreachable = True
exclude = build

[pylint.messages control]
disable =
    missing-module-docstring,
    missing-class-docstring,
    missing-function-docstring,
    too-few-public-methods,
    import-outside-toplevel,
    assigning-non-slot,
    duplicate-code
    
[pylint.basic]
good-names =
    e,
    fd,
max-args = 7

[flake8]
max-line-length = 88
select = B, E, F, W, B9, ISC
ignore = E203, E501, W503

[coverage:run]
source = liquid_extra
omit = 
    */.local/*
    .tox/*